k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockmaster
  labels:
    name: blockmaster
spec:
  ports:
  - port: 80
    name: http
  selector:
    name: blockmaster
